--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/joaoc/Downloads/easyaccept.jar"/>
+	<classpathentry kind="lib" path="/home/joaocfb/Downloads/easyaccept(1).jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
